--- a/index.html
+++ b/index.html
@@ -7,8 +7,16 @@
       </head>
 
       <body>
+        <header>
+            <h1>JavaScript Timed Coding Quiz</h1>
+        </header>
         
+
+
+
+
+
         <script src="assets/js/script.js"></script>
       </body>
-      
+
 </html>
