Adds paragraph element and button element to start quiz

--- a/index.html
+++ b/index.html
@@ -10,8 +10,16 @@
         <header>
             <h1>JavaScript Timed Coding Quiz</h1>
         </header>
-        
 
+        <div>
+            <h2></h2>
+            <p>
+                Try to answer the following JavaScript code-related questions within the time limit. Incorrect answers will subtract time from the clock.
+            </p>
+        </div>
+        <div>
+            <button>Start Quiz</button>
+        </div>
 
 
 
