Adds a end screen element in HTML with submit button

--- a/index.html
+++ b/index.html
@@ -90,6 +90,17 @@
             <p id="status"></p>
         </div>
 
+        <div>
+            <h2>You're done!</h2>
+            <p id="finalscore"></p>
+            <p>Enter initials:</p>
+            <form>
+                <input type="text">
+                <input type="submit">
+            </form>
+        </div>
+
+    
 <!-- High Scores Screen -->
        <div>
             <h2>High Scores</h2>
