--- a/index.html
+++ b/index.html
@@ -90,6 +90,8 @@
             <p id="status"></p>
         </div>
 
+
+<!-- End screen -->
         <div>
             <h2>You're done!</h2>
             <p id="finalscore"></p>
