Adds comment to nav HTML and area for timer

--- a/index.html
+++ b/index.html
@@ -6,11 +6,13 @@
         <link rel="stylesheet" href="assets/css/style.css" />
       </head>
 
+<!-- Nav area to view high scores and timer   -->
       <body>
          <nav>
             <p>
                 View High Scores
             </p>
+            <p id="countdown"></p>
         </nav>
         
 <!-- Welcome Screen  -->
