Adds js event listener for start quiz button and hooked variable to UI

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 Try to answer the following JavaScript code-related questions within the time limit. Incorrect answers will subtract time from the clock.
             </p>
             <div>
-                <button>Start Quiz</button>
+                <button id="startquiz">Start Quiz</button>
             </div>
         </div>
 
