Attempts to have end screen show when timer ends in js

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
 
 <!-- End screen -->
-        <div>
+        <div id="endscreen">
             <h2>You're done!</h2>
             <p id="finalscore"></p>
             <p>Enter initials:</p>
