--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </nav>
         
 <!-- Welcome Screen  -->
-        <div>
+        <div id="welcome">
             <h1>JavaScript Timed Coding Quiz</h1>
             <p>
                 Try to answer the following JavaScript code-related questions within the time limit. Incorrect answers will subtract time from the clock.
