Adds new ids to question elements in HTML

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
        
 <!-- Question Screens -->
-        <div id="show" style="display:none">
+        <div id="question1" style="display:none">
             <h2>Commonly used data types DO NOT include:</h2>
             <ol>
                 <li><button>alerts</button></li>
@@ -40,7 +40,7 @@
             <p id="status"></p>
         </div>
 
-        <div id="show" style="display:none">
+        <div id="question2" style="display:none">
             <h2>The condition in an if / else statement is enclosed within ____.</h2>
             <ol>
                 <li><button>square brackets</button></li>
@@ -52,7 +52,7 @@
             <p id="status"></p>
        </div>
 
-       <div id="hide" style="display:none">
+       <div id="question3" style="display:none">
             <h2>Arrays in JavaScript can be used to store ____.</h2>
             <ol>
                 <li><button>booleans</button></li>
@@ -65,7 +65,7 @@
         </div>
        
 
-        <div id="show" style="display:none">
+        <div id="question4" style="display:none">
             <h2>String values must be enclosed within ____
                 when being assigned to variables.</h2>
             <ol>
@@ -78,7 +78,7 @@
             <p id="status"></p>
         </div>
 
-        <div id="show" style="display:none">
+        <div id="question5" style="display:none">
             <h2>A very useful tool used during development
                 and debugging for printing content to the
                 debugger is:</h2>
