Adds comments to HTML question elements

--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
         </div>
 
        
-<!-- Question Screens -->
+<!-- QUESTIONS -->
+
+        <!-- Question 1 -->
         <div id="question1" style="display:none">
             <h2>Commonly used data types DO NOT include:</h2>
             <ol>
@@ -40,6 +42,7 @@
             <p id="status"></p>
         </div>
 
+        <!-- Question 2 -->
         <div id="question2" style="display:none">
             <h2>The condition in an if / else statement is enclosed within ____.</h2>
             <ol>
@@ -52,6 +55,7 @@
             <p id="status"></p>
        </div>
 
+       <!-- Question 3 -->
        <div id="question3" style="display:none">
             <h2>Arrays in JavaScript can be used to store ____.</h2>
             <ol>
@@ -64,7 +68,7 @@
             <p id="status"></p>
         </div>
        
-
+        <!-- Question 4 -->
         <div id="question4" style="display:none">
             <h2>String values must be enclosed within ____
                 when being assigned to variables.</h2>
@@ -78,6 +82,7 @@
             <p id="status"></p>
         </div>
 
+        <!-- Question 5 -->
         <div id="question5" style="display:none">
             <h2>A very useful tool used during development
                 and debugging for printing content to the
