Adds function to display a Correct message when choosing right answer for first question

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div id="question1" style="display:none">
             <h2>Commonly used data types DO NOT include:</h2>
             <ol>
-                <li><button>alerts</button></li>
+                <li><button id="q1correct">alerts</button></li>
                 <!-- ^correct answer -->
                 <li><button>strings</button></li>
                 <li><button>booleans</button></li>
@@ -89,7 +89,7 @@
                 debugger is:</h2>
             <ol>
                 <li><button>terminal/bash</button></li>
-                <li><button>console.log</button></li>
+                <li><button id="q5correct">console.log</button></li>
                 <!-- ^correct answer -->
                 <li><button>JavaScript</button></li>
                 <li><button>for loops</button></li>
