--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
             <ol>
                 <li><button id="q1correct">alerts</button></li>
                 <!-- ^correct answer -->
-                <li><button>strings</button></li>
-                <li><button>booleans</button></li>
-                <li><button>numbers</button></li>
+                <li><button id="q1incorrect">strings</button></li>
+                <li><button id="q1incorrect">booleans</button></li>
+                <li><button id="q1incorrect">numbers</button></li>
             </ol>
             <p id="status"></p>
         </div>
