Adds placeholder link to view high scores

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <body>
          <nav>
             <p>
-                View High Scores
+                <a href="#high-scores">View High Scores</a>
             </p>
             <p id="countdown"></p>
         </nav>
