Creates a function to listen for clicks in container of question 1 for correct or incorrect answers

--- a/index.html
+++ b/index.html
@@ -31,14 +31,14 @@
 <!-- QUESTIONS -->
 
         <!-- Question 1 -->
-        <div id="question1" style="display:none">
+        <div class = question-container1 id="question1" style="display:none">
             <h2>Commonly used data types DO NOT include:</h2>
             <ol>
-                <li><button id="q1correct">alerts</button></li>
+                <li><button data-status=correct id="q1correct">alerts</button></li>
                 <!-- ^correct answer -->
-                <li><button id="q1incorrect">strings</button></li>
-                <li><button id="q1incorrect">booleans</button></li>
-                <li><button id="q1incorrect">numbers</button></li>
+                <li><button data-status=incorrect id="q1incorrect">strings</button></li>
+                <li><button data-status=incorrect id="q1incorrect">booleans</button></li>
+                <li><button data-status=incorrect id="q1incorrect">numbers</button></li>
             </ol>
             <p id="status"></p>
         </div>
