--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
         <div class = question-container1 id="question1" style="display:none">
             <h2>Commonly used data types DO NOT include:</h2>
             <ol>
-                <li><button data-status=correct id="q1correct">alerts</button></li>
+                <li><button data-status=correct>alerts</button></li>
                 <!-- ^correct answer -->
-                <li><button data-status=incorrect id="q1incorrect">strings</button></li>
-                <li><button data-status=incorrect id="q1incorrect">booleans</button></li>
-                <li><button data-status=incorrect id="q1incorrect">numbers</button></li>
+                <li><button data-status=incorrect>strings</button></li>
+                <li><button data-status=incorrect>booleans</button></li>
+                <li><button data-status=incorrect>numbers</button></li>
             </ol>
             <p id="status"></p>
         </div>
