Tried to make a new array of questions to replace html in DOM

--- a/index.html
+++ b/index.html
@@ -30,6 +30,25 @@
        
 <!-- QUESTIONS -->
 
+
+        <div class="questionContainer">
+            <div class="question"></div>
+            <ol class="choices-area">
+                <li id="choice"><button></button></li>
+                <li id="choice"><button></button></li>
+                <li id="choice"><button></button></li>
+                <li id="choice"><button></button></li>
+            </ol>
+        </div>
+
+
+
+
+
+
+
+
+
         <!-- Question 1 -->
         <div class = question-container1 id="question1" style="display:none">
             <h2>Commonly used data types DO NOT include:</h2>
