Adds for loop using questions array

--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
         <div class="questionContainer">
             <div class="question"></div>
             <ol class="choices-area">
+                <!-- <li id="choice"><button></button></li>
                 <li id="choice"><button></button></li>
                 <li id="choice"><button></button></li>
-                <li id="choice"><button></button></li>
-                <li id="choice"><button></button></li>
+                <li id="choice"><button></button></li> -->
             </ol>
         </div>
 
