Rearranges js functions and adds new functions for button clicks

--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
 
     <div class="questionContainer">
       <div class="question"></div>
-      <ol class="choices-area">
-        <!-- <li id="choice"><button></button></li>
-                <li id="choice"><button></button></li>
-                <li id="choice"><button></button></li>
-                <li id="choice"><button></button></li> -->
-      </ol>
+      <div class="choices-area">
+        <button id="choice-a"></button>
+        <button id="choice-b"></button>
+        <button id="choice-c"></button>
+        <button id="choice-d"></button>
+      </div>
     </div>
 
 
