Adds a preventDefault to new event listener when logging scores as to not refresh page

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
       <p>Enter initials:</p>
       <form>
         <input type="text" />
-        <input type="submit" />
+        <input id="submit" type="submit" />
       </form>
     </div>
 
