Starts to add way to store initials in local storage and high scores viewing

--- a/index.html
+++ b/index.html
@@ -121,13 +121,13 @@
       <p id="finalscore"></p>
       <p>Enter initials:</p>
       <form>
-        <input type="text" />
+        <input id=initials-input type="text" />
         <input id="submit" type="submit" />
       </form>
     </div>
 
     <!-- High Scores Screen -->
-    <div style="display: none">
+    <div id="high-scores" style="display: none">
       <h2>High Scores</h2>
 
       <div>
