Fixes issues where first question wasn't showing by changing questionindex from 0 to -1

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <nav>
       <p>
-        <a href="#high-scores">View High Scores</a>
+        <button id="high-scores">View High Scores</button>
       </p>
       <p id="countdown"></p>
     </nav>
