--- a/index.html
+++ b/index.html
@@ -127,12 +127,14 @@
     </div>
 
     <!-- High Scores Screen -->
-    <div id="high-scores" style="display: none">
-      <h2>High Scores</h2>
-
+    <div id="high-scores">
+      <h2 id="highscore-title"></h2>
       <div>
-        <button>Go Back</button>
-        <button>Clear High Scores</button>
+        <ol id="stored-scores"></ol>
+      </div>  
+      <div>
+        <!-- <button>Go Back</button> -->
+        <div id="clear-scores"></div>
       </div>
     </div>
 
