Attempted to add function to hide and show buttons when starting quiz but commented out

--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
     <div class="questionContainer">
       <div class="question"></div>
       <div class="choices-area">
-        <button id="choice-a"></button>
-        <button id="choice-b"></button>
-        <button id="choice-c"></button>
-        <button id="choice-d"></button>
+        <div><button id="choice-a"></button></div>
+        <div><button id="choice-b"></button></div>
+        <div><button id="choice-c"></button></div>
+        <div><button id="choice-d"></button></div>
       </div>
     </div>
 
